add missing kafka bootstrapservers